--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Crew"/>
+        <activity android:name=".Logbuch" />
+        <activity android:name=".Bordbuch" />
         <activity android:name=".Team_kontaktieren" />
+        <activity android:name=".Einstellungen" />
         <activity android:name=".Quiz" />
         <activity android:name=".Seekarte2" />
         <activity android:name=".Main_menue" />
