Seekarte neu überarbeitet Startbildschirm ohne Startbutton

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Seekarte" />
         <activity android:name=".Team_kontaktieren" />
         <activity android:name=".Quiz" />
-        <activity android:name=".Bordbuch"/>
-        <activity android:name=".Logbuch"/>
-        <activity android:name=".Seekarte2" />
+        <activity android:name=".Bordbuch" />
+        <activity android:name=".Logbuch" />
+        <activity android:name=".Einstellungen" />
+        <activity android:name=".Statistik" />
         <activity android:name=".Main_menue" />
         <activity android:name=".Choose_name" />
         <activity android:name=".MainActivity">
