Bordbuch + Seekarte um 2 Kapitel erweitert und überarbeitet Quellen Ebene hinzugefügt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".Bordbuch" />
         <activity android:name=".Quiz" />
         <activity android:name=".Logbuch" />
+        <activity android:name=".Quellen" />
         <activity android:name=".Crew" />
         <activity android:name=".Team_kontaktieren" />
         <activity android:name=".ExampleDialog" />
