--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".Verloren" />
         <activity android:name=".Gewonnen" />
         <activity android:name=".Quiz" />
+        <activity android:name=".Bordbuch" />
         <activity android:name=".Logbuch" />
         <activity android:name=".Quellen" />
         <activity android:name=".Crew" />
