--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Loesung"/>
-        <activity android:name=".Programmieren"/>
+        <activity android:name=".EasterEgg"></activity>
+        <activity android:name=".Loesung" />
+        <activity android:name=".Programmieren" />
         <activity android:name=".Verloren" />
         <activity android:name=".Gewonnen" />
         <activity android:name=".Quiz" />
