Dialogfenster Logbuchinfo hinzugefügt Bugfixing Fortschritt zurücksetzen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         <activity android:name=".Quellen" />
         <activity android:name=".Crew" />
         <activity android:name=".Team_kontaktieren" />
-        <activity android:name=".ExampleDialog" />
-        <activity android:name=".ExampleDialog2" />
+        <activity android:name=".DialogName" />
+        <activity android:name=".DialogFortschritt" />
         <activity android:name=".Einstellungen" />
         <activity android:name=".Statistik" />
         <activity android:name=".Seekarte" />
